--- a/WorldCities/package.json
+++ b/WorldCities/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/service-worker": "^16.2.0",
+    "angular-connection-service": "13.0.1",
     "jest-editor-support": "*",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
