--- a/WorldCitiesAPI/Properties/launchSettings.json
+++ b/WorldCitiesAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "WorldCitiesAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:40443;http://localhost:40080",
       "environmentVariables": {
